rules/parser/mongorpcrules_parser.go
// Code generated from MongoRPCRules.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // MongoRPCRules

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'='", "'**'", "'{'", "'}'", "'('", "')'", "'$('", "'['", "']'", "'.'",
	"':'", "','", "';'", "'<'", "'<='", "'>='", "'>'", "'=='", "'!='", "'&&'",
	"'||'", "'!'", "'&'", "'|'", "'+'", "'-'", "'*'", "'^'", "'%'", "'in'",
	"'allow'", "'match'", "'if'", "'get'", "'exists'", "'true'", "'false'",
	"'list'", "'create'", "'update'", "'read'", "'write'", "'delete'", "'function'",
	"'return'", "'null'", "'service'", "", "", "", "'/'",
}
var symbolicNames = []string{
	"", "", "", "CurlyOpen", "CurlyClose", "BracketOpen", "BracketClose", "PathVariableBracket",
	"SquareBracketOpen", "SquareBracketClose", "Dot", "Colon", "Comma", "Semicolon",
	"LessThan", "LessOrEqual", "GreaterOrEqual", "GreaterThan", "Equals", "Unequal",
	"LogicalAnd", "LogicalOr", "LogicalNot", "BinaryAnd", "BinaryOr", "ArithmeticAdd",
	"ArithmeticSub", "ArithmeticMul", "ArithmeticExp", "ArithmeticModus", "InOperator",
	"Allow", "Match", "If", "Get", "Exists", "True", "False", "List", "Create",
	"Update", "Read", "Write", "Delete", "Function", "Return", "Null", "Service",
	"Number", "StringExpression", "Identifier", "Slash", "WS", "Comment",
}

var ruleNames = []string{
	"service", "namespaceIdentifier", "namespaceBlock", "matchBlock", "allowKey",
	"comment", "matcher", "allow", "getPathVariable", "pathVariable", "arg",
	"arguments", "memberArg", "memberArguments", "argDeclaration", "argDeclarations",
	"functionDeclaration", "fieldReference", "memberFunction", "id", "expression",
	"objectReference", "getPathExpressionVariable", "getPath", "ruleFunctionCall",
	"functionCall", "matchPath",
}

type MongoRPCRulesParser struct {
	*antlr.BaseParser
}

// NewMongoRPCRulesParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *MongoRPCRulesParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewMongoRPCRulesParser(input antlr.TokenStream) *MongoRPCRulesParser {
	this := new(MongoRPCRulesParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "MongoRPCRules.g4"

	return this
}

// MongoRPCRulesParser tokens.
const (
	MongoRPCRulesParserEOF                 = antlr.TokenEOF
	MongoRPCRulesParserT__0                = 1
	MongoRPCRulesParserT__1                = 2
	MongoRPCRulesParserCurlyOpen           = 3
	MongoRPCRulesParserCurlyClose          = 4
	MongoRPCRulesParserBracketOpen         = 5
	MongoRPCRulesParserBracketClose        = 6
	MongoRPCRulesParserPathVariableBracket = 7
	MongoRPCRulesParserSquareBracketOpen   = 8
	MongoRPCRulesParserSquareBracketClose  = 9
	MongoRPCRulesParserDot                 = 10
	MongoRPCRulesParserColon               = 11
	MongoRPCRulesParserComma               = 12
	MongoRPCRulesParserSemicolon           = 13
	MongoRPCRulesParserLessThan            = 14
	MongoRPCRulesParserLessOrEqual         = 15
	MongoRPCRulesParserGreaterOrEqual      = 16
	MongoRPCRulesParserGreaterThan         = 17
	MongoRPCRulesParserEquals              = 18
	MongoRPCRulesParserUnequal             = 19
	MongoRPCRulesParserLogicalAnd          = 20
	MongoRPCRulesParserLogicalOr           = 21
	MongoRPCRulesParserLogicalNot          = 22
	MongoRPCRulesParserBinaryAnd           = 23
	MongoRPCRulesParserBinaryOr            = 24
	MongoRPCRulesParserArithmeticAdd       = 25
	MongoRPCRulesParserArithmeticSub       = 26
	MongoRPCRulesParserArithmeticMul       = 27
	MongoRPCRulesParserArithmeticExp       = 28
	MongoRPCRulesParserArithmeticModus     = 29
	MongoRPCRulesParserInOperator          = 30
	MongoRPCRulesParserAllow               = 31
	MongoRPCRulesParserMatch               = 32
	MongoRPCRulesParserIf                  = 33
	MongoRPCRulesParserGet                 = 34
	MongoRPCRulesParserExists              = 35
	MongoRPCRulesParserTrue                = 36
	MongoRPCRulesParserFalse               = 37
	MongoRPCRulesParserList                = 38
	MongoRPCRulesParserCreate              = 39
	MongoRPCRulesParserUpdate              = 40
	MongoRPCRulesParserRead                = 41
	MongoRPCRulesParserWrite               = 42
	MongoRPCRulesParserDelete              = 43
	MongoRPCRulesParserFunction            = 44
	MongoRPCRulesParserReturn              = 45
	MongoRPCRulesParserNull                = 46
	MongoRPCRulesParserService             = 47
	MongoRPCRulesParserNumber              = 48
	MongoRPCRulesParserStringExpression    = 49
	MongoRPCRulesParserIdentifier          = 50
	MongoRPCRulesParserSlash               = 51
	MongoRPCRulesParserWS                  = 52
	MongoRPCRulesParserComment             = 53
)

// MongoRPCRulesParser rules.
const (
	MongoRPCRulesParserRULE_service                   = 0
	MongoRPCRulesParserRULE_namespaceIdentifier       = 1
	MongoRPCRulesParserRULE_namespaceBlock            = 2
	MongoRPCRulesParserRULE_matchBlock                = 3
	MongoRPCRulesParserRULE_allowKey                  = 4
	MongoRPCRulesParserRULE_comment                   = 5
	MongoRPCRulesParserRULE_matcher                   = 6
	MongoRPCRulesParserRULE_allow                     = 7
	MongoRPCRulesParserRULE_getPathVariable           = 8
	MongoRPCRulesParserRULE_pathVariable              = 9
	MongoRPCRulesParserRULE_arg                       = 10
	MongoRPCRulesParserRULE_arguments                 = 11
	MongoRPCRulesParserRULE_memberArg                 = 12
	MongoRPCRulesParserRULE_memberArguments           = 13
	MongoRPCRulesParserRULE_argDeclaration            = 14
	MongoRPCRulesParserRULE_argDeclarations           = 15
	MongoRPCRulesParserRULE_functionDeclaration       = 16
	MongoRPCRulesParserRULE_fieldReference            = 17
	MongoRPCRulesParserRULE_memberFunction            = 18
	MongoRPCRulesParserRULE_id                        = 19
	MongoRPCRulesParserRULE_expression                = 20
	MongoRPCRulesParserRULE_objectReference           = 21
	MongoRPCRulesParserRULE_getPathExpressionVariable = 22
	MongoRPCRulesParserRULE_getPath                   = 23
	MongoRPCRulesParserRULE_ruleFunctionCall          = 24
	MongoRPCRulesParserRULE_functionCall              = 25
	MongoRPCRulesParserRULE_matchPath                 = 26
)

// IServiceContext is an interface to support dynamic dispatch.
type IServiceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsServiceContext differentiates from other interfaces.
	IsServiceContext()
}

type ServiceContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyServiceContext() *ServiceContext {
	var p = new(ServiceContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MongoRPCRulesParserRULE_service
	return p
}

func (*ServiceContext) IsServiceContext() {}

func NewServiceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ServiceContext {
	var p = new(ServiceContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MongoRPCRulesParserRULE_service

	return p
}

func (s *ServiceContext) GetParser() antlr.Parser { return s.parser }

func (s *ServiceContext) Service() antlr.TerminalNode {
	return s.GetToken(MongoRPCRulesParserService, 0)
}

func (s *ServiceContext) NamespaceIdentifier() INamespaceIdentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INamespaceIdentifierContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INamespaceIdentifierContext)
}

func (s *ServiceContext) NamespaceBlock() INamespaceBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INamespaceBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INamespaceBlockContext)
}

func (s *ServiceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ServiceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ServiceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MongoRPCRulesListener); ok {
		listenerT.EnterService(s)
	}
}

func (s *ServiceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MongoRPCRulesListener); ok {
		listenerT.ExitService(s)
	}
}

func (p *MongoRPCRulesParser) Service() (localctx IServiceContext) {
	localctx = NewServiceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MongoRPCRulesParserRULE_service)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Match(MongoRPCRulesParserService)
	}
	{
		p.SetState(55)
		p.NamespaceIdentifier()
	}
	{
		p.SetState(56)
		p.NamespaceBlock()
	}

	return localctx
}

// INamespaceIdentifierContext is an interface to support dynamic dispatch.
type INamespaceIdentifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNamespaceIdentifierContext differentiates from other interfaces.
	IsNamespaceIdentifierContext()
}

type NamespaceIdentifierContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamespaceIdentifierContext() *NamespaceIdentifierContext {
	var p = new(NamespaceIdentifierContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MongoRPCRulesParserRULE_namespaceIdentifier
	return p
}

func (*NamespaceIdentifierContext) IsNamespaceIdentifierContext() {}

func NewNamespaceIdentifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamespaceIdentifierContext {
	var p = new(NamespaceIdentifierContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MongoRPCRulesParserRULE_namespaceIdentifier

	return p
}

func (s *NamespaceIdentifierContext) GetParser() antlr.Parser { return s.parser }

func (s *NamespaceIdentifierContext) AllId() []IIdContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IIdContext)(nil)).Elem())
	var tst = make([]IIdContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IIdContext)
		}
	}

	return tst
}

func (s *NamespaceIdentifierContext) Id(i int) IIdContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IIdContext)
}

func (s *NamespaceIdentifierContext) AllDot() []antlr.TerminalNode {
	return s.GetTokens(MongoRPCRulesParserDot)
}

func (s *NamespaceIdentifierContext) Dot(i int) antlr.TerminalNode {
	return s.GetToken(MongoRPCRulesParserDot, i)
}

func (s *NamespaceIdentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamespaceIdentifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamespaceIdentifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MongoRPCRulesListener); ok {
		listenerT.EnterNamespaceIdentifier(s)
	}
}

func (s *NamespaceIdentifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MongoRPCRulesListener); ok {
		listenerT.ExitNamespaceIdentifier(s)
	}
}

func (p *MongoRPCRulesParser) NamespaceIdentifier() (localctx INamespaceIdentifierContext) {
	localctx = NewNamespaceIdentifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MongoRPCRulesParserRULE_namespaceIdentifier)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Id()
	}
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == MongoRPCRulesParserDot {
		{
			p.SetState(59)
			p.Match(MongoRPCRulesParserDot)
		}
		{
			p.SetState(60)
			p.Id()
		}

		p.SetState(65)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// INamespaceBlockContext is an interface to support dynamic dispatch.
type INamespaceBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNamespaceBlockContext differentiates from other interfaces.
	IsNamespaceBlockContext()
}

type NamespaceBlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamespaceBlockContext() *NamespaceBlockContext {
	var p = new(NamespaceBlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MongoRPCRulesParserRULE_namespaceBlock
	return p
}

func (*NamespaceBlockContext) IsNamespaceBlockContext() {}

func NewNamespaceBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamespaceBlockContext {
	var p = new(NamespaceBlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MongoRPCRulesParserRULE_namespaceBlock

	return p
}

func (s *NamespaceBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *NamespaceBlockContext) CurlyOpen() antlr.TerminalNode {
	return s.GetToken(MongoRPCRulesParserCurlyOpen, 0)
}

func (s *NamespaceBlockContext) CurlyClose() antlr.TerminalNode {
	return s.GetToken(MongoRPCRulesParserCurlyClose, 0)
}

func (s *NamespaceBlockContext) AllMatcher() []IMatcherContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMatcherContext)(nil)).Elem())
	var tst = make([]IMatcherContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMatcherContext)
		}
	}

	return tst
}

func (s *NamespaceBlockContext) Matcher(i int) IMatcherContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMatcherContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMatcherContext)
}

func (s *NamespaceBlockContext) AllComment() []ICommentContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICommentContext)(nil)).Elem())
	var tst = make([]ICommentContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICommentContext)
		}
	}

	return tst
}

func (s *NamespaceBlockContext) Comment(i int) ICommentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICommentContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICommentContext)
}

func (s *NamespaceBlockContext) AllFunctionDeclaration() []IFunctionDeclarationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFunctionDeclarationContext)(nil)).Elem())
	var tst = make([]IFunctionDeclarationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFunctionDeclarationContext)
		}
	}

	return tst
}

func (s *NamespaceBlockContext) FunctionDeclaration(i int) IFunctionDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunctionDeclarationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *NamespaceBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamespaceBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamespaceBlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MongoRPCRulesListener); ok {
		listenerT.EnterNamespaceBlock(s)
	}
}

func (s *NamespaceBlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MongoRPCRulesListener); ok {
		listenerT.ExitNamespaceBlock(s)
	}
}

func (p *MongoRPCRulesParser) NamespaceBlock() (localctx INamespaceBlockContext) {
	localctx = NewNamespaceBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MongoRPCRulesParserRULE_namespaceBlock)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(66)
		p.Match(MongoRPCRulesParserCurlyOpen)
	}
	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(MongoRPCRulesParserMatch-32))|(1<<(MongoRPCRulesParserFunction-32))|(1<<(MongoRPCRulesParserComment-32)))) != 0 {
		p.SetState(70)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case MongoRPCRulesParserMatch:
			{
				p.SetState(67)
				p.Matcher()
			}

		case MongoRPCRulesParserComment:
			{
				p.SetState(68)
				p.Comment()
			}

		case MongoRPCRulesParserFunction:
			{
				p.SetState(69)
				p.FunctionDeclaration()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(74)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(75)
		p.Match(MongoRPCRulesParserCurlyClose)
	}

	return localctx
}

// IMatchBlockContext is an interface to support dynamic dispatch.
type IMatchBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMatchBlockContext differentiates from other interfaces.
	IsMatchBlockContext()
}

type MatchBlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMatchBlockContext() *MatchBlockContext {
	var p = new(MatchBlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MongoRPCRulesParserRULE_matchBlock
	return p
}

func (*MatchBlockContext) IsMatchBlockContext() {}

func NewMatchBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MatchBlockContext {
	var p = new(MatchBlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MongoRPCRulesParserRULE_matchBlock

	return p
}

func (s *MatchBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *MatchBlockContext) CurlyOpen() antlr.TerminalNode {
	return s.GetToken(MongoRPCRulesParserCurlyOpen, 0)
}

func (s *MatchBlockContext) CurlyClose() antlr.TerminalNode {
	return s.GetToken(MongoRPCRulesParserCurlyClose, 0)
}

func (s *MatchBlockContext) AllAllow() []IAllowContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAllowContext)(nil)).Elem())
	var tst = make([]IAllowContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAllowContext)
		}
	}

	return tst
}

func (s *MatchBlockContext) Allow(i int) IAllowContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAllowContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAllowContext)
}

func (s *MatchBlockContext) AllMatcher() []IMatcherContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMatcherContext)(nil)).Elem())
	var tst = make([]IMatcherContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMatcherContext)
		}
	}

	return tst
}

func (s *MatchBlockContext) Matcher(i int) IMatcherContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMatcherContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMatcherContext)
}

func (s *MatchBlockContext) AllComment() []antlr.TerminalNode {
	return s.GetTokens(MongoRPCRulesParserComment)
}

func (s *MatchBlockContext) Comment(i int) antlr.TerminalNode {
	return s.GetToken(MongoRPCRulesParserComment, i)
}

func (s *MatchBlockContext) AllFunctionDeclaration() []IFunctionDeclarationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFunctionDeclarationContext)(nil)).Elem())
	var tst = make([]IFunctionDeclarationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFunctionDeclarationContext)
		}
	}

	return tst
}

func (s *MatchBlockContext) FunctionDeclaration(i int) IFunctionDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunctionDeclarationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *MatchBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MatchBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MatchBlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MongoRPCRulesListener); ok {
		listenerT.EnterMatchBlock(s)
	}
}

func (s *MatchBlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MongoRPCRulesListener); ok {
		listenerT.ExitMatchBlock(s)
	}
}

func (p *MongoRPCRulesParser) MatchBlock() (localctx IMatchBlockContext) {
	localctx = NewMatchBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, MongoRPCRulesParserRULE_matchBlock)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(77)
		p.Match(MongoRPCRulesParserCurlyOpen)
	}
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la-31)&-(0x1f+1)) == 0 && ((1<<uint((_la-31)))&((1<<(MongoRPCRulesParserAllow-31))|(1<<(MongoRPCRulesParserMatch-31))|(1<<(MongoRPCRulesParserFunction-31))|(1<<(MongoRPCRulesParserComment-31)))) != 0 {
		p.SetState(82)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case MongoRPCRulesParserAllow:
			{
				p.SetState(78)
				p.Allow()
			}

		case MongoRPCRulesParserMatch:
			{
				p.SetState(79)
				p.Matcher()
			}

		case MongoRPCRulesParserComment:
			{
				p.SetState(80)
				p.Match(MongoRPCRulesParserComment)
			}

		case MongoRPCRulesParserFunction:
			{
				p.SetState(81)
				p.FunctionDeclaration()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(86)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(87)
		p.Match(MongoRPCRulesParserCurlyClose)
	}

	return localctx
}

// IAllowKeyContext is an interface to support dynamic dispatch.
type IAllowKeyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAllowKeyContext differentiates from other interfaces.
	IsAllowKeyContext()
}

type AllowKeyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAllowKeyContext() *AllowKeyContext {
	var p = new(AllowKeyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MongoRPCRulesParserRULE_allowKey
	return p
}

func (*AllowKeyContext) IsAllowKeyContext() {}

func NewAllowKeyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AllowKeyContext {
	var p = new(AllowKeyContext)
